<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/sync_shelf"
            android:icon="@drawable/menu_sync"
            android:title="@string/sync_shelf" />
        <item
            android:id="@+id/scan_local"
            android:icon="@drawable/menu_scan"
            android:title="@string/scan_local" />
        <item
            android:id="@+id/wifi_transfer"
            android:icon="@drawable/menu_wifi"
            android:title="@string/wifi_transfer" />

        <item
            android:id="@+id/setting"
            android:icon="@drawable/menu_setting"
            android:title="@string/setting" />
    </group>
    <item android:title="@string/info_others">
        <menu>
            <item
                android:id="@+id/login_out"
                android:icon="@drawable/menu_logout"
                android:title="@string/logout" />

            <item
                android:id="@+id/disclaimer"
                android:icon="@drawable/disclaimer"
                android:title="@string/disclaimer" />

            <item
                android:id="@+id/about_me"
                android:icon="@drawable/menu_author"
                android:title="@string/about_me" />
        </menu>
    </item>
</menu>
